# Cloud-Automation-Toolkit-Python-AWS

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_local.py
cloudtool/: __init__.py  __main__.py  cli.py
cloudtool/cloudwatch/: __init__.py  manager.py
cloudtool/ec2/: __init__.py  manager.py
cloudtool/ecr/: __init__.py  manager.py
cloudtool/iam/: __init__.py  manager.py
cloudtool/rds/: __init__.py  manager.py
cloudtool/reports/: __init__.py  generator.py
cloudtool/s3/: __init__.py  manager.py
docs/: ARQUITETURA.md  RUNBOOK.md  VARIAVEIS.md
tests/: conftest.py  test_ec2.py  test_reports.py  test_s3.py
web_dashboard/: app.py  demo_data.py  generate_html.py  report.html
